2024-01-11T16:19:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7491552957 # 14
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-11
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 194 223 / 195 225
* notice: next accum: outdated-unq outdated-all / unq all: 195 225 / 196 226
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-12-28] / [2024-01-11]

2024-01-07T08:18:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7437028556 # 1
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
* notice: last 14d: unq all: 1 2
* notice: prev accum: outdated-unq outdated-all / unq all: 188 217 / 194 223
* notice: next accum: outdated-unq outdated-all / unq all: 194 223 / 195 225
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-10-31 2023-11-01 2023-11-03 2023-11-06 2023-11-08] / [2023-12-28]

2023-11-13T08:14:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6847288724 # 1339
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-13
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 187 216 / 194 223
* notice: next accum: outdated-unq outdated-all / unq all: 188 217 / 194 223
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-10-30] / []

2023-11-09T08:13:38Z: