@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-01-11T16:19:59Z",
+  "timestamp" : "2024-01-13T08:17:58Z",
   "count_outdated" : 225,
   "uniques_outdated" : 195,
-  "count" : 226,
-  "uniques" : 196,
+  "count" : 227,
+  "uniques" : 197,
   "clones" : [
     {
       "timestamp": "2024-01-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-13T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
