@@ -1,3 +1,12 @@
+2024-01-13T08:17:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7511295604 # 19
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-13
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 195 225 / 196 226
+* notice: next accum: outdated-unq outdated-all / unq all: 195 225 / 197 227
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-13]
+
 2024-01-11T16:19:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7491552957 # 14
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-11
